[package]
name = "midnight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
thiserror = "1.0.35"
tokio = "1.21.1"
twilight-gateway = "0.13.0"
twilight-http = "0.13.0"
twilight-model = "0.13.0"
twilight-util = { version = "0.13.0", features = ["permission-calculator"] }
twilight-validate = "0.13.0"
